added logo to header and applied oswald font sans serif

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,6 +101,10 @@ header{
     background-color: coral;
 }
 
+h1{
+    font-family:'oswald', sans-serif;
+}
+
 /*main*/
 main{
     background-color: lightblue;
