--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,10 +71,10 @@
 /* <uniquifier>: Use a unique and descriptive class name
    <weight>: Use a value from 200 to 700  */
 
-.oswald-<uniquifier> {
+.oswald {
   font-family: "Oswald", sans-serif;
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight: 400;
   font-style: normal;
 }
 
@@ -191,13 +191,16 @@ footer {
       display: flex;
     }
 
-    #menu > li{
+    #menu>li {
       padding-left: 1rem;
     }
 
     .nav-toggle-label{
-      display:none;
+      display: none;
     }
+
+
+
 
   }
 
