--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,7 +186,7 @@ footer {
     box-shadow: none;
     width: fit-content;
     padding-right: 1rem;
-
+  }
     #menu {
       display: flex;
     }
@@ -199,9 +199,19 @@ footer {
       display: none;
     }
 
-
-
-
+    #logo {
+      font-size: 280%;
+      line-height: 75px;
+      margin:  0 0.5rem;
   }
+    main{
+      margin-top: 79px;
+    }
 
 }
+
+    @media screen and (min-width: 992px) {
+      #menu a:hover{
+        border-bottom: 1px solid #3a3a3a;
+      }
+    }
