added styling flex text align padding justify content to social media footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,9 +171,13 @@ main {
 }
 
 /*footer*/
-footer {
-  background-color: orange;
+#social-media{
+  text-align: center;
+  padding: 20px o;
+  display:flex;
+  justify-content: space-evenly;
 }
+  
 
 /* media query set for tablets and larger */
 
