added gallery and signup pages and links to nav bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,6 +178,12 @@ main {
   justify-content: space-evenly;
   list-style-type: none;
 }
+
+#social-media i{
+  font-size: 160%;
+  padding: 5%;
+  color:#3a3a3a;
+}
   
 
 /* media query set for tablets and larger */
