--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,10 +164,17 @@ nav {
 
 /*main*/
 main {
-  background-color: lightblue;
+  
   /*makes main part of page take up any surplus space */
   flex: 1 0 auto;
   margin-top: 47px;
+}
+
+/* Hero */
+#hero{
+  height:600px;
+  width: 100%;
+  background: url(../images/hero-image.webp) no-repeat center center/cover;
 }
 
 /*footer*/
