--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,6 +224,15 @@ hr {
   margin: 5px 0;
 }
 
+/* Reasons circle image*/
+#circle-cover-bg{
+  width: 90vh;
+  height: 90vh;
+  margin-bottom: 20px;
+  background: url(../images/reasons-image.webp) no-repeat center center/cover;
+  /* Make image a circle*/
+  border-radius: 50%;
+}
 
 
 /*footer*/
